fixed 3 bugs in style.css to make text visible, remove relative position

--- a/bug byte savara - bugs/frontend/css/style.css
+++ b/bug byte savara - bugs/frontend/css/style.css
@@ -35,15 +35,12 @@ body {
   background: white;
   border-radius: 12px;
 
-  /* BUG */
-  position: relative;
-  left: -15px;
 }
 
 button {
   padding: 8px;
   background: #3b82f6;
-  color: #3b82f6; /* BUG */
+  color: white;
 }
 
 button:hover {
@@ -60,7 +57,7 @@ button:hover {
 }
 
 .center-box h2 {
-  color: #f8fafc; /* BUG */
+  color: #0f172a;
 }
 
 input {
